frontend/test/should_pass/exectype_AssignMapCreationToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(::n=map<int,foo>{});
	}
}