frontend/test/should_fail/exectype_AssignMapAccessToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(m:int=3 ;> aa:AA=varia && h=m[aa]); // must be map type
	}
}